--- a/project.json
+++ b/project.json
@@ -1,9 +1,20 @@
 {
+	"contentrating" : "Everyone",
+	"description" : "Simple yet customizable panel based wallpaper I made.",
 	"file" : "index.html",
 	"general" : 
 	{
 		"properties" : 
 		{
+			"audiocolor" : 
+			{
+				"condition" : "audiovisualizervisibility.value == true",
+				"index" : 19,
+				"order" : 119,
+				"text" : "Audio Color",
+				"type" : "color",
+				"value" : "0.7019607843137254 0.21176470588235294 1"
+			},
 			"audioheight" : 
 			{
 				"condition" : "audiovisualizervisibility.value == true && matchheight.value == false",
@@ -134,7 +145,7 @@
 				"step" : 0.1,
 				"text" : "Bar Height",
 				"type" : "slider",
-				"value" : 5
+				"value" : 1
 			},
 			"clockformat" : 
 			{
@@ -241,7 +252,12 @@
 		},
 		"supportsaudioprocessing" : true
 	},
-	"title" : "Binary Clock + Visualizer",
+	"preview" : "preview.jpg",
+	"tags" : [ "Unspecified" ],
+	"title" : "Panel Based Customizable Wallpaper",
 	"type" : "web",
-	"version" : 0
+	"version" : 1,
+	"visibility" : "public",
+	"workshopid" : "2823349195",
+	"workshopurl" : "steam://url/CommunityFilePage/2823349195"
 }
